# mprompt

./: README.md  pyproject.toml
mprompt/: __init__.py  agent.py  cli.py  instructions.py  main.py  models.py
