[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mprompt"
version = "0.1.1"
description = "mprompt is a CLI tool that generates prompts for your projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.68.0",
    "pyperclip>=1.8.2",
]
authors = [
    {name = "Juan Cobo Celdrán", email = "jcoboceldran@gmail.com"},
]
license = {text = "MIT"}
keywords = ["git", "commit", "ai", "gemini", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[tool.hatch.build.targets.wheel]
packages = ["mprompt"]

[project.scripts]
mprompt = "mprompt.main:main"